# sqlalchemy-pro

./: .gitignore  app.py  pyproject.toml  test_app.py
.github/workflows/: python-test.yml
