[tool.poetry]
name = "sqlalchemy-pro"
version = "0.1.0"
description = "Simple SQLAlchemy project"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "fpho"
url = "https://files.pythonhosted.org"
priority = "supplemental"

